week 2 roadmap